Amended paths
